@@ -300,6 +300,92 @@ argument_list|,
 name|spaceIndex
 argument_list|)
 expr_stmt|;
+comment|// IVY-1155: support some strange formats like this one:
+comment|// http://repo2.maven.org/maven2/org/apache/pdfbox/fontbox/0.8.0-incubator/fontbox-0.8.0-incubator.jar.md5
+if|if
+condition|(
+name|expected
+operator|.
+name|endsWith
+argument_list|(
+literal|":"
+argument_list|)
+condition|)
+block|{
+name|StringBuffer
+name|result
+init|=
+operator|new
+name|StringBuffer
+argument_list|()
+decl_stmt|;
+name|char
+index|[]
+name|chars
+init|=
+name|csFileContent
+operator|.
+name|substring
+argument_list|(
+name|spaceIndex
+operator|+
+literal|1
+argument_list|)
+operator|.
+name|toCharArray
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|chars
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+operator|!
+name|Character
+operator|.
+name|isWhitespace
+argument_list|(
+name|chars
+index|[
+name|i
+index|]
+argument_list|)
+condition|)
+block|{
+name|result
+operator|.
+name|append
+argument_list|(
+name|chars
+index|[
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|expected
+operator|=
+name|result
+operator|.
+name|toString
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 else|else
 block|{
